# UniversalUI

./: .gitmodules  CMakeLists.txt  README.md  UI.hpp
include/: UI.hpp  UniversalUI.hpp  UserInterface.hpp
include/interface/: IInput.hpp  IOutput.hpp  IUI.hpp
src/: UI.cpp  UniversalUI.cpp
